# bil-bakalim

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
docs/: API.md  ARCHITECTURE.md  BRANDING.md  CODE_QUALITY.md  DESIGN_SYSTEM.md  DEVELOPER_GUIDE.md  PRD.md  PROJECT_OVERVIEW.md  README.md  SIGNPATH_COMPLIANCE.md  USER_GUIDE.md  guncel-oyun-kurallari.md  oyun-kuralları.md  ui-ux-design.md
docs/archive/: PRD.md  PROJECT_OVERVIEW.md  README.md
docs/migrations/: 01-main-menu-migration.md  02-game-screen-migration.md  03-results-screens-migration.md  04-category-mode-selection-migration.md  05-priority-2-screens-migration.md  06-priority-3-management-screens.md  07-priority-4-5-remaining-screens.md
docs/tasks/: 00-INDEX.md  (+73 more)
public/: site.webmanifest
scripts/: check-db-words.mjs  sync-version.mjs
src/: App.tsx  index.css  test-imports.tsx  test-stores.ts
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: performance_indexes.sql
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: category.rs  database.rs  game_history.rs  mod.rs  settings.rs  word.rs
src-tauri/src/db/: connection.rs  mod.rs  schema.rs  seed.rs
src-tauri/src/models/: mod.rs
(+216 files in other folders)
