[package]
name = "bil-bakalim"
version = "1.3.1"
description = "Bil Bakalım - Interactive Word Guessing Game"
authors = ["Emre Dağ <info@emredag.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/emredag/bil-bakalim"
readme = "../README.md"
keywords = ["game", "word-game", "tauri", "desktop"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bil_bakalim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6.0"
rand = "0.8"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"
